--- a/web/views/home.html
+++ b/web/views/home.html
@@ -8,22 +8,26 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <h2 class="sub-header">Members of parliament</h2>
+            <div class="col-md-6" ng-repeat="mep in meps">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">
+                    {{mep.mepinfo.fullname}}
+                  </h3>
+                </div>
+                <div class="panel-body">
+                  <img ng-src="http://itsyourparliament.eu/img/meps/{{mep.mepinfo.mepid}}.jpg" class="img-responsive center-block" alt="{{mep.mepinfo.fullname}}"/>
+                  <ul class="list-group" style="margin-top:10px">
+                    <li class="list-group-item">Country : {{mep.mepinfo.country}}</li>
+                    <li class="list-group-item">Party: {{mep.mepinfo.group}}</li>
+                  </ul>
+                  <span class="glyphicon glyphicon-user" ng-click="showMepDashboard(mep.mepinfo.mepid)"></span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
