cleanup of old code

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -11,12 +11,6 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="#">GovernMeter</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -39,6 +33,9 @@
 <script src="js/services/services.js"></script>
 <script src="js/services/DashboardService.js"></script>
 <script src="js/services/MemberService.js"></script>
+
+<script src="js/directives/directives.js"></script>
+<script src="js/directives/spinner.js"></script>
 
 <script src="js/controllers/controllers.js"></script>
 <script src="js/controllers/DashboardController.js"></script>
