tag cloud intro

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
 
-	<div ng-view></div>
+<div ng-view></div>
 </div>
 </body>
 
@@ -29,12 +29,17 @@
 <script src="lib/jquery-1.10.1.min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/docs.min.js"></script>
+<script src="lib/canvasport-v0.1.js"></script>
+<script src="lib/nebulos.js"></script>
+
 
 <script src="js/services/services.js"></script>
 <script src="js/services/DashboardService.js"></script>
 <script src="js/services/MemberService.js"></script>
 
 <script src="js/directives/directives.js"></script>
+<script src="js/directives/twitter.js"></script>
+<script src="js/directives/tags.js"></script>
 
 <script src="js/controllers/controllers.js"></script>
 <script src="js/controllers/DashboardController.js"></script>
