Bring votes to front

--- a/web/views/dashboard.html
+++ b/web/views/dashboard.html
@@ -38,7 +38,7 @@
             <div class="col-xs-6 col-sm-3 placeholder">
               <div class="panel panel-default">
                   <div class="panel-body" style="height:250px">
-
+						<h1>{{votes}}</h1>
                   </div>
                   <h4 style="margin-bottom:25px">Votes</h4>
               </div>
