--- a/web/views/dashboard.html
+++ b/web/views/dashboard.html
@@ -76,6 +76,7 @@
               </div>
               
             </div>
+            <div ng-chart id="container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
           </div>
       </div>
     </div>
