--- a/web/views/index.html
+++ b/web/views/index.html
@@ -11,11 +11,9 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">GovernMeter</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </nav>
 
@@ -31,6 +29,8 @@
 <script src="lib/docs.min.js"></script>
 <script src="lib/canvasport-v0.1.js"></script>
 <script src="lib/nebulos.js"></script>
+<script src="lib/highcharts.js"></script>
+<script src="lib/exporting.js"></script>
 
 
 <script src="js/services/services.js"></script>
@@ -40,11 +40,13 @@
 <script src="js/directives/directives.js"></script>
 <script src="js/directives/twitter.js"></script>
 <script src="js/directives/tags.js"></script>
+<script src="js/directives/chart.js"></script>
 
 <script src="js/controllers/controllers.js"></script>
 <script src="js/controllers/DashboardController.js"></script>
 <script src="js/controllers/HomeController.js"></script>
 
 <script src="js/app.js"></script>
+
 
 </html>
