--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -132,3 +132,11 @@ input.rounded {
 input.rounded:focus {
   border-color: #339933;
 }
+
+.panel {
+  border-radius:                    0px;
+  -webkit-border-radius:            0px;
+  -moz-border-radius:               0px;
+  border: 0px;
+  box-shadow: hsla(0, 0%, 0%, 0.0) 0px 0px 0px 0px !important;
+}
