--- a/web/views/dashboard.html
+++ b/web/views/dashboard.html
@@ -1,7 +1,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <img ng-src="http://itsyourparliament.eu/img/meps/{{mep.mepinfo.mepid}}.jpg" class="img-responsive center-block" style="margin-bottom:15px" alt="{{mep.mepinfo.fullname}}"/>
+          <img style="border-radius:50%" ng-src="http://itsyourparliament.eu/img/meps/{{mep.mepinfo.mepid}}.jpg" class="img-responsive center-block" style="margin-bottom:15px" alt="{{mep.mepinfo.fullname}}"/>
           <ul class="list-group" style="margin-top:10px">
                     <li class="list-group-item">Country : {{mep.mepinfo.country}}</li>
                     <li class="list-group-item">Party: {{mep.mepinfo.group}}</li>
