--- a/web/views/index.html
+++ b/web/views/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/dashboard.css" >
 <link rel="stylesheet" href="css/spinner.css" >
+<link rel="stylesheet" href="http://css-spinners.com/css/spinner/three-quarters.css" type="text/css">
 </head>
 
 <body>
