--- a/web/views/home.html
+++ b/web/views/home.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="container">
-            <div ng-show="meps.length == 0" class="row row-centered">
+            <div ng-show="!loaded" class="row row-centered">
               <div class="col-md-12" style="text-align:center">
                 <div class="three-quarters">Loading ...</div>
               </div>
