grid layout improvements

--- a/web/views/dashboard.html
+++ b/web/views/dashboard.html
@@ -19,7 +19,7 @@
               </div>
               
             </div>
-            <div class="col-xs-6 col-sm-4 placeholder">
+            <div class="col-xs-4 col-sm-4 placeholder">
               <div class="panel panel-default">
                   <div class="panel-body" style="height:75px">
                     <h1>10</h1>
@@ -27,7 +27,7 @@
                     <h4 style="margin-bottom:25px">Appearances</h4>
               </div>
             </div>
-            <div class="col-xs-6 col-sm-4 placeholder">
+            <div class="col-xs-4 col-sm-4 placeholder">
               <div class="panel panel-default">
                   <div class="panel-body" style="height:75px">
                     <h1>{{votes}}</h1>
@@ -35,9 +35,11 @@
                     <h4 style="margin-bottom:25px">Votes</h4>
               </div>
             </div>
-            <div class="col-xs-6 col-sm-6 placeholder">
-              <div class="panel panel-default">
-                  <div class="panel-body" style="height:425px">
+          </div>
+          <div class="row placeholders">
+              <div class="col-xs-6 col-sm-6 placeholder">
+                <div class="panel panel-default">
+                    <div class="panel-body" style="height:425px">
                     <div ng-chart id="container" style="min-width: 310px; height: 400px; max-width: 600px"></div>
                   </div>
               </div>
@@ -51,7 +53,9 @@
                   </div>
               </div>
             </div>
-            <div class="col-xs-6 col-sm-4 placeholder" >
+          </div>
+          <div class="row placeholders">
+            <div class="col-xs-4 col-sm-4 placeholder" >
               <div class="panel panel-default">
                    <h4>Tags</h4>
                   <div class="panel-body">
@@ -59,7 +63,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-xs-6 col-sm-8 placeholder">
+            <div class="col-xs-8 col-sm-8 placeholder">
               <div class="panel panel-default">
                   <h4>Speeches</h4>
                   <div class="panel-body" style="height:250px">
