--- a/web/views/home.html
+++ b/web/views/home.html
@@ -3,8 +3,8 @@
       <div class="container">
         <div class="form-group has-feedback">
     <label class="control-label">Find your Member of European Parliament</label>
-    <input type="text" class="form-control" placeholder="Search for MEP" ng-model="input" ng-change="filter()"></input>
-    <i class="glyphicon glyphicon-search form-control-feedback"></i>
+    <input type="text" class="form-control" placeholder="Search for MEP" ng-model="input" ng-change="filter()"
+	style="font-size: 2em; height: 2em"></input>
 </div>
         
       </div>
