--- a/web/views/dashboard.html
+++ b/web/views/dashboard.html
@@ -2,9 +2,16 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <img style="border-radius:50%" ng-src="http://itsyourparliament.eu/img/meps/{{mep.mepinfo.mepid}}.jpg" class="img-responsive center-block" style="margin-bottom:15px" alt="{{mep.mepinfo.fullname}}"/>
-          <ul class="list-group" style="margin-top:10px">
-                    <li class="list-group-item">Country : {{mep.mepinfo.country}}</li>
-                    <li class="list-group-item">Party: {{mep.mepinfo.group}}</li>
+				<ul style="margin-top:10px; border-width: 0px !important; list-style-type:none;">
+                    <li style="padding-bottom:15px">
+					{{mep.mepinfo.country}}
+					</li>
+					<li style="padding-bottom:15px">
+					{{mep.mepinfo.group}} / {{mep.mepinfo.party}}
+					</li>
+					<li style="padding-bottom:15px">
+					{{mep.mepinfo.address}}
+					</li>
                   </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
